[tool.poetry]
name = "huntinghorn"
version = "0.3.0"
description = "Command-Line tool for Hunting Horn users."
authors = ["Jeremiah Boby <mail@jeremiahboby.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
colorama = "^0.4.3"
bullet = "^2.2.0"
prompt-toolkit = "^3.0.7"

[tool.poetry.scripts]
horn = "huntinghorn:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
